fixed vertical alignment issues in the scrolling header by using display:inline-block instead of float:left

--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -1,5 +1,5 @@
 ﻿body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
 }
 
@@ -15,7 +15,7 @@ button {
     padding-right: 20px;
     border-radius: 2px;
     cursor: pointer;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;;
+    font-family: 'Segoe UI', 'Roboto', Tahoma, Geneva, Verdana, sans-serif;;
 }
 
 @media (max-width: 600px), (orientation: portrait) {
@@ -221,16 +221,11 @@ button {
 
 .scrolled-header-text {
     margin-left: 20px;
-    margin-top: 4vh;
-    float: left
 }
 
 @media (max-width: 600px), (orientation: portrait) {
     .scrolled-header-text {
         display: none;
-        margin-left: 20px;
-        margin-top: 4vh;
-        float: left
     }
 }
 
